wip: faster tests